# claude-code-setup

./: .gitignore  CLAUDE.md  history.jsonl  settings.json  settings.local.json  stats-cache.json  statusline-enhanced.sh  statusline-ps1.sh
agents/: pr-reviewer.md
commands/: bugbot.md  consult.md  create-pr.md  daily-summary.md  edit-gh-issue.md  fix-compaction.md  fix-orphan-tool-result.md  pending.md  subagent.md  validate-report.md
debug/: 000959f7-8b0f-4489-987f-d91c9b8d028f.txt  05d131a4-8985-4eac-946d-7119b55eeaf2.txt  05d96cf0-6264-4882-b95b-3d142a2dc1e5.txt  0a24c146-63ab-44b1-aae4-e65b532f4ff1.txt  0ae93b3d-1751-4672-a319-3aadce13f693.txt  0fd1b872-4c87-44f3-987f-a1bdb56c80cb.txt  11e4a5c6-660d-465d-89bb-760e519206b2.txt  14f59a85-6cad-44cc-99b4-6661cbb13e9c.txt  18a7316f-120c-4cd3-9fc5-f42042a4bad8.txt  19ca4781-2497-46bf-9eb7-9e13de229e92.txt  1e317d1a-fa25-4272-ab5f-33486c976d47.txt  1e5f610a-5f89-46f5-800c-d21a1c013789.txt  21ba1353-4bf4-4182-92f1-a398e912a4c0.txt  2786d716-c201-4cda-9190-5a3c7c8674ae.txt  29c8dce9-9c2a-42fc-bfcf-862e837f2375.txt  2a08c07c-6f72-4fd3-a0b7-ba9c0692b4c8.txt  2d8913a9-c0f0-459a-9967-dbba364c9f70.txt  (+70 more)
skills/cclog/: .coverage  README.md  SKILL.md  pyproject.toml
skills/cclog/cclog/: __init__.py  batch.py  cli.py  errors.py  filters.py  models.py  parser.py  search.py  subagents.py  timeline.py  tools.py
skills/cclog/cclog/exporters/: __init__.py  base.py  csv_exporter.py  llm.py  markdown.py  simple_json.py
skills/cclog/tests/: conftest.py  test_batch.py  test_cli.py  test_errors.py  test_parser.py  test_timeline.py
(+458 files in other folders)
