[project]
name = "cclog"
version = "0.1.0"
description = "Agent-native CLI for reading Claude Code JSONL conversation files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "orjson>=3.9",
    "rich>=13.0",
]

[project.scripts]
cclog = "cclog.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cclog"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "ARG"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
